[package]
name = "semverlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
git2 = "0.16.1"
semver = "1.0.16"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.19"
